# simple-dns

./: CMakeLists.txt  Makefile  README.md  build.sh
include/: dns_constants.h  dns_server.h
src/: dns_server.cpp  dns_server.h  main.cpp
